fix bug et transitionvuejs

--- a/public/assets/dashboard/assets/css/style.css
+++ b/public/assets/dashboard/assets/css/style.css
@@ -542,3 +542,17 @@ table.dataTable {
         display: none;
     }
 }
+
+
+/**
+Transition vuejs implement css
+ */
+.fade-enter-active, .fade-leave-active {
+    transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+    opacity: 0;
+}
+/**
+End transition
+ */
