add news letter

--- a/public/assets/dashboard/assets/css/style.css
+++ b/public/assets/dashboard/assets/css/style.css
@@ -556,3 +556,12 @@ Transition vuejs implement css
 /**
 End transition
  */
+
+/**
+ Hide input
+ */
+.fooDiv{
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+}
