--- a/public/assets/site/assets/scss/custom/_section.scss
+++ b/public/assets/site/assets/scss/custom/_section.scss
@@ -34,7 +34,7 @@
     .stars-and-coded{
         margin-top: 8rem;
     }
-    
+
     .shape {
         position: absolute;
         top: 0;
@@ -481,7 +481,7 @@
     }
 }
 
-// Profile cover
+// profile cover
 .section-profile-cover {
     height: 580px;
     background-size: cover;
