--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -419,8 +419,12 @@
   border-radius: 3px;
   background: #FFF;
   cursor: default;
-  -webkit-box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
-          box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
+  -webkit-box-shadow: inset 0 0 1px #FFF,
+ inset 0 1px 7px #EBEBEB,
+ 0 3px 6px -3px #BBB;
+          box-shadow: inset 0 0 1px #FFF,
+ inset 0 1px 7px #EBEBEB,
+ 0 3px 6px -3px #BBB;
   -webkit-transition: 300ms ease 0s;
   -moz-transition: 300ms ease 0s;
   -ms-transition: 300ms ease 0s;
@@ -7038,7 +7042,7 @@ Created using IcoMoon - icomoon.io
 }
 
 /* Body */
-/* Profile Page Background Style */
+/* profile Page Background Style */
 .page-header {
   background: rgba(44, 44, 44, 0.2);
   /* For browsers that do not support gradients */
@@ -7054,7 +7058,7 @@ Created using IcoMoon - icomoon.io
   width: 140px;
 }
 
-/* Profile Image Style */
+/* profile Image Style */
 @-webkit-keyframes pulsate {
   0% {
     -webkit-transform: scale(0.6, 0.6);
@@ -7129,7 +7133,7 @@ Created using IcoMoon - icomoon.io
           animation: none;
 }
 
-/* Profile Page Social button Style */
+/* profile Page Social button Style */
 .button-container .btn-default {
   margin-right: 8px;
 }
