--- a/public/assets/vendor_site/css/argon-design-system.css
+++ b/public/assets/vendor_site/css/argon-design-system.css
@@ -20909,8 +20909,8 @@ header {
   .page-header .description {
     color: #f4f5f7; }
   .page-header.page-header-small {
-    min-height: 60vh;
-    max-height: 440px; }
+    /*min-height: 60vh;*/
+    /*max-height: 440px; */}
   .page-header.page-header-mini {
     min-height: 40vh;
     max-height: 340px; }
