Change footer section

--- a/public/assets/css/kazoutech.css
+++ b/public/assets/css/kazoutech.css
@@ -70,8 +70,27 @@
     transform: scale(1.04);
     -webkit-transform: scale(1.04);
 }
-
-
+.kazouTech-dropdown {
+    position: absolute;
+    transform: translate3d(0px, 42px, 0px);
+    top: 0px;
+    left: 0px;
+    will-change: transform;
+}
+.kazouTech-divider {
+    border-bottom: 1px solid #ffffff;
+}
+.kazouTech-red-color {
+    color: #d12420 !important;
+}
+.footer .footer-description {
+    padding: 20px 0px;
+    text-align: justify;
+    opacity: 1;
+}
+.btn-wrapper a.btn {
+    color: #ffffff;
+}
 
 /*** RESPONSIVE DEVICE ***/
 /************************/
