--- a/public/assets/css/kazoutech.css
+++ b/public/assets/css/kazoutech.css
@@ -13,15 +13,17 @@
     cursor: pointer;
     display: none;
     z-index: 99;
-    border-radius: 50%;
-    width: 70px;
-    height: 70px;
+    border-radius: 10%;
+    width: 60px;
+    height: 60px;
     font-size: 1.5em;
 }
 #toTop:hover,
 .material-button:hover {
     border: 2px solid white;
 }
+
+/**
 .scroll-navbar {
     position: fixed !important;
     border-bottom: 1px solid white;
@@ -77,6 +79,8 @@
     left: 0px;
     will-change: transform;
 }
+
+ */
 .kazouTech-divider {
     border-bottom: 1px solid #ffffff;
 }
@@ -94,6 +98,7 @@
 
 /*** RESPONSIVE DEVICE ***/
 /************************/
+/*
 @media (min-width: 768px) {
     .navbar-transparent .navbar-brand {
         position: relative;
@@ -119,4 +124,24 @@
         margin: 0px -170px 0px;
         position: relative;
     }
+}
+
+ */
+
+.kazouImageCarousel-file-upload {
+    display: none;
+}
+.profile > img {
+    max-height: 100%;
+    width: 100%;
+    display: inline-block;
+    margin-bottom: 10px;
+    overflow: hidden;
+    text-align: center;
+    vertical-align: middle;
+    max-width: 250px;
+    box-shadow: 0 10px 30px -12px rgba(0,0,0,.42), 0 4px 25px 0 rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
+}
+.profile button {
+    margin-top: -7px;
 }
