--- a/public/assets/css/kazoutech.css
+++ b/public/assets/css/kazoutech.css
@@ -22,6 +22,21 @@
 .material-button:hover {
     border: 2px solid white;
 }
+.position-navbar {
+    left: 5px;
+    top: -1px;
+    position: relative;
+}
+.carousel-indicators li.active {
+    background-color: #d12420;
+}
+.icon-position {
+    position: relative;
+    top: 2px;
+}
+.carousel-caption {
+    top: 40%;
+}
 
 /**
 .scroll-navbar {
@@ -31,11 +46,6 @@
     outline: 0;
     background: linear-gradient(to left, #979aab, #5e72e4);
 }
-.position-navbar {
-    left: 5px;
-    top: -1px;
-    position: relative;
-}
 .navbar-expand-lg .navbar-collapse {
     position: absolute;
     float: right;
@@ -43,13 +53,6 @@
 }
 .navbar.navbar-main {
     height: 100px;
-}
-.icon-position {
-    position: relative;
-    top: 2px;
-}
-.carousel-caption {
-    top: 40%;
 }
 .carousel-caption h1 {
     color: #ffffff;
@@ -63,15 +66,6 @@
 .d-block {
     height: inherit;
 }
-.font-weight-medium:hover .fa-chevron-right:before {
-    left: 10px;
-    transition: left 600ms;
-    position: relative;
-}
-.kazouTech-cities[data-animation="zooming"]:hover {
-    transform: scale(1.04);
-    -webkit-transform: scale(1.04);
-}
 .kazouTech-dropdown {
     position: absolute;
     transform: translate3d(0px, 42px, 0px);
@@ -81,11 +75,37 @@
 }
 
  */
+.kazouTechSubscribe-wrapper {
+    background-color: #d12420 !important;
+}
+.kazouTechSteps-wrapper,
+.kazouTechOccupations-wrapper {
+    padding: 3rem 0rem !important;
+}
+.ni-bold-up::before {
+    position: relative;
+    left: -3px;
+}
+.font-weight-medium:hover .fa-chevron-right:before {
+    left: 10px;
+    transition: left 300ms;
+    position: relative;
+}
+.kazouTech-cities[data-animation="zooming"]:hover {
+    transform: scale(1.04);
+    -webkit-transform: scale(1.04);
+}
 .kazouTech-divider {
     border-bottom: 1px solid #ffffff;
 }
 .kazouTech-red-color {
     color: #d12420 !important;
+}
+.kazouTech-grey-color {
+    color: #63666a !important;
+}
+.kazouTech-white-color {
+    color: #ffffff !important;
 }
 .footer .footer-description {
     padding: 20px 0px;
