--- a/public/assets/css/kazoutech.css
+++ b/public/assets/css/kazoutech.css
@@ -73,8 +73,11 @@
     left: 0px;
     will-change: transform;
 }
-
  */
+.w-100 {
+    min-height: 100vh;
+    object-fit: fill;
+}
 .kazouTechSubscribe-wrapper {
     background-color: #d12420 !important;
 }
@@ -126,14 +129,7 @@
         left: -15%;
     }
 }
-@media only screen and (max-width: 768px) {
-    .carousel-indicators {
-        display: none;
-    }
-    ul.navbar-nav li a.btn {
-        width: 100%;
-    }
-}
+
 @media (min-width: 768px) and (max-width: 1024px) {
     .navbar-transparent .navbar-brand {
         left: 0%;
@@ -147,6 +143,28 @@
 }
 
  */
+
+@media only screen and (max-width: 768px) {
+    .carousel-indicators {
+        display: none;
+    }
+    ul.navbar-nav li a.btn {
+        width: 100%;
+    }
+    .w-100,
+    .page-header {
+        min-height: 70vh;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .carousel-caption {
+        top: 30%;
+    }
+    .display-1 {
+        font-size: 1.5rem;
+    }
+}
 
 .kazouImageCarousel-file-upload {
     display: none;
