--- a/public/assets/css/kazoutech.css
+++ b/public/assets/css/kazoutech.css
@@ -74,7 +74,7 @@
     will-change: transform;
 }
  */
-.w-100 {
+.kazouTech-carousel-image {
     min-height: 100vh;
     object-fit: fill;
 }
@@ -151,7 +151,7 @@
     ul.navbar-nav li a.btn {
         width: 100%;
     }
-    .w-100,
+    .kazouTech-carousel-image,
     .page-header {
         min-height: 70vh;
     }
