Slides Home Mac devices fixed

--- a/public/assets/css/kazoutech.css
+++ b/public/assets/css/kazoutech.css
@@ -192,6 +192,11 @@
     }
 }
 
+@media (min-width: 900px) and (max-width: 1440px) {
+    .container-devices {
+        max-width: 720px;
+    }
+}
 @media (min-width: 768px) and (max-width: 1024px) {
     .navbar-transparent .navbar-brand {
         left: 0%;
